--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
         "vite": "^5.0",
         "vue": "^3.4.0",
         "vue-tsc": "^1.8.27"
+    },
+    "dependencies": {
+        "@inertiajs/inertia-vue3": "^0.6.0"
     }
 }
