--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,7 +23,7 @@
 	},
 	"remoteUser": "sail",
 	"postCreateCommand": "chown -R 1000:1000 /var/www/html 2>/dev/null || true",
-	"postStartCommand": "npm install && php artisan migrate && npm run dev"
+	"postStartCommand": "npm install && php artisan migrate && php artisan storage:link && npm run dev"
 	// "forwardPorts": [],
 	// "runServices": [],
 	// "shutdownAction": "none",
